--- a/switch.html
+++ b/switch.html
@@ -39,17 +39,20 @@
         </div>
       </div>
     </nav>
-
-<<<<<<< HEAD
-        <div class="projectheader">
-            <h4>CASE STUDY - 2019</h4>
-           <h1>Upskilling Digital Proficiency</h1>
-           <img src="Images/switch-01.png"/>
-        </div>
+    <div class="projectheader">
+        <h4>CASE STUDY - 2019</h4>
+        <h1>Upskilling Digital Proficiency</h1>
+        <img src="Images/switch-01.png"/>
+    </div>
     </div>
     <div class="projectinfo">
         <div class="mainbody-01">
-            <p>Switch is a learning platform that aims to upskill employees in this period of digital transformation. Topics such as data analytics, cybersecurity and ongoing digital intiatives are introduced in short form content to make it engaging and easily digestable for users. Additionally, users are able to test their understand by taking on challenges which earns them points and a placing on the leaderboard.</p>
+            <p>Switch is a learning platform that aims to upskill employees 
+              in this period of digital transformation. Topics such as data analytics, 
+              cybersecurity, and ongoing digital initiatives are introduced in short-form 
+              content to make it engaging and easily digestible for users. Additionally, 
+              users can test their understanding by taking on challenges that earn 
+              them points and a placing on the leaderboard.</p>
         </div>
         <div class="projectstatus">
             <p class="primarydetails">My Role</p>
@@ -60,17 +63,27 @@
     </div>
     <h5 class="grey">THE CHALLENGE</h5>
     <div class="mainbody-06">
-        <h2>XX</h2>
+        <h2>Redesign Switch to make the application more delightful and intuitive</h2>
     </div>
     <div class="projectprogress">
         <div class="projecttitle">
             <h3>Glimpse into the Process</h3>
         </div>
         <div class="mainbody-02">
-            <p>After 2 years of daily publishing, the content had outgrown the original frame and users found it increasingly hard to find the content. With an ever-growing content, the platform was in need of a reboot. This included fixing the navigation and content strucutre, refreshing the visuals and aligning the experience for mobile, tablet and desktop.</p>
+            <p>After 2 years of daily publishing, the content had outgrown the original 
+              frame and users found it increasingly hard to find the content. With an 
+              ever-growing content, the platform needed a reboot. This included fixing the 
+              navigation and content structure, refreshing the visuals and aligning the 
+              experience for mobile, tablet and desktop.</p>
             <h5 class="grey">CARD SORTING</h5> 
-            <p class ="spacing">In order to understand users’ mental models, an open card sort was conducted for both exisiting features and content. Coming from different business units, management levels and usage of the application, a total of 25 people participated in the card sorting exercise.</p>
-            <p>We realised that users who were less familiar with the application (and some who were) made a distinction between learning and testing content, giving the latter its own category with labels like "test time” or “brainteasers”. Previously, there was no clear segregation between the content types.</p>
+            <p class ="spacing">To understand users’ mental models, an open card sort 
+              was conducted for both existing features and content. Coming from different 
+              business units, management levels and usage of the application, a total of 25 
+              people participated in the card sorting exercise.</p>
+            <p>We realized that users who were less familiar with the application 
+              (and some who were) made a distinction between learning and testing content, 
+              giving the latter its category with labels like "test time” or “brainteasers”. 
+              Previously, there was no clear segregation between the content types.</p>
         </div>
     </div>
     <div class="rightcontainer">
@@ -79,7 +92,13 @@
     </div>
     <div class="mainbody-03">
         <h5 class="grey">THE VISUALS</h5> 
-        <p>As part of the card sorting exercise, we also asked the participants to give us their candid thoughts on what Switch meant to them and what values it conveyed. A seperate brand exercise was also conducted with upper management to describe what Switch is and what it should be. Based on all the sessions we’ve conducted, and our own interpretations, we’ve came up with three directions, inspired primarily by the topic of learning. This was later distilled down to a single visual direction with further input from the product owner.</p>
+        <p>As part of the card sorting exercise, we also asked the participants to give us 
+          their candid thoughts on what Switch meant to them and what values it conveyed. 
+          A separate brand exercise was also conducted with upper management to describe what 
+          Switch is and what it should be. Based on all the sessions we’ve conducted, and our 
+          own interpretations, we came up with three directions, inspired primarily by the topic of 
+          learning. This was later distilled down to a single visual direction with further input 
+          from the product owner.</p>
     </div>
     <div class="rightcontainer">
         <img class="captionmb" src="Images/switch-03.png">
@@ -87,7 +106,10 @@
     </div>
     <div class="mainbody-03">
         <h5 class="grey">PROTOTYPING</h5> 
-        <p>Working as a team, paper prototypes were a quick way of bouncing ideas off each other, testing initial flows and concepts. This helped the team to move faster as everyone was aligned in what we were trying to accomplish during the sprint. Throughout this time, the designs were constantly printed out for others to comment and give feedback.</p>
+        <p>Working as a team, paper prototypes were a quick way of bouncing ideas off each other, 
+          testing initial flows and concepts. This helped the team to move faster as everyone 
+          was aligned in what we were trying to accomplish during the sprint. Throughout this time, 
+          the designs were constantly printed out for others to comment and give feedback.</p>
     </div>
     <div class="rightcontainer">
         <img class="captionmb" src="Images/switch-04.png">
@@ -95,7 +117,10 @@
     </div>
     <div class="mainbody-03">
         <h5 class="grey">USER TESTING</h5> 
-        <p>Every 3 weeks, these prototypes were shown to users to test and gather feedback on the new changes. In the hour long sessions, users were provided with a serious of tasks (E.g. Complete the lesson and leave a comment). Based on their actions, questions were posed to better understand their thought processes and how they would improve the current design.</p>
+        <p>Every 3 weeks, these prototypes were shown to users to test and gather feedback on 
+          the new changes. In the hour-long sessions, users were provided with a serious of tasks 
+          (E.g. Complete the lesson and leave a comment). Based on their actions, questions were 
+          posed to better understand their thought processes and how they would improve the current design.</p>
     </div>
     <div class="rightcontainer">
         <img class="captionmb" src="Images/switch-05.png">
@@ -107,15 +132,21 @@
             <img class="imageflush" src="Images/switch-06.png"/>
         </div>
         <div class="mainbody-04">
-            <p>From mobile to tablet to desktop, we had to ensure the experience was standardized. This meant optimizing the experience for each device while taking into consideration asset management, device performance and time for development.</p>
+            <p>From mobile to tablet to desktop, we had to ensure the experience was standardized. 
+              This meant optimizing the experience for each device while taking into consideration 
+              asset management, device performance and time for development.</p>
         </div>
     </div>
     <div class="projectdesign-02">
         <div class="mainbody-05">
-            <p>To much of our surpise, the leaderboard was very popular and users made it a habit to learn every day to climb up the leaderboard. However, many users also felt deflated as the top learners were seemingly out of reach. Therefore, seasonal and event leaderboards were added to foster healthy competition while giving every user a fair chance to compete among each other.</p>
+            <p>To our surprise, the leaderboard was very popular and users made it a habit to learn 
+              every day to climb up the leaderboard. However, many users also felt deflated as the 
+              top learners were seemingly out of reach. Therefore, seasonal and event leaderboards 
+              were added to foster healthy competition while giving every user a fair chance to 
+              compete with each other.</p>
         </div>
         <div class="designpicture-01">
-            <img class="imageflush" src="Images/coming.png"/>
+            <img class="imageflush" src="Gifs/switch-01.gif"/>
         </div>
     </div>
     <div class="projectdesign-01">
@@ -123,14 +154,78 @@
                 <img class="imageflush" src="Gifs/switch-02.gif">
             </div>
             <div class="mainbody-04">
-                <p>Many of the leaders were interested to see the engagement with the platform. Therefore, a dashboard view was created within PowerBI. The interface was designed to show a summary of all key data point on a single desktop screen. Thus in a glance, the leaders could have an overall picture of their respective departments with the option to dive deeper if they wanted to.</p>
+                <p>Many of the leaders were interested to see the engagement with the platform. 
+                  Therefore, a dashboard view was created within PowerBI. The interface was designed 
+                  to show a summary of all key data points on a single desktop screen. Thus in a 
+                  glance, the leaders could have an overall picture of their respective departments 
+                  with the option to dive deeper if they wanted to.</p>
             </div>
-=======
-    <div class="projectheader">
-      <h4>CASE STUDY - 2019</h4>
-      <h1>Upskilling Digital Proficiency</h1>
-      <img src="Images/switch-01.png" />
->>>>>>> 1268022545605cea77bcc41e96301d92739b5709
     </div>
+    <footer>
+      <div>
+        <a
+          href="https://www.linkedin.com/in/teorzjohn/"
+          class="sociallink"
+          target="_blank"
+        >
+          <svg
+            aria-hidden="true"
+            focusable="false"
+            data-prefix="fab"
+            data-icon="linkedin-in"
+            class="svg-inline--fa fa-linkedin-in fa-w-14"
+            role="img"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 448 512"
+          >
+            <path
+              fill="currentColor"
+              d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"
+            ></path>
+          </svg>
+        </a>
+        <a
+          href="https://www.linkedin.com/in/teorzjohn/"
+          class="sociallink"
+          target="_blank"
+          ><svg
+            aria-hidden="true"
+            focusable="false"
+            data-prefix="fab"
+            data-icon="dribbble"
+            class="svg-inline--fa fa-dribbble fa-w-14"
+            role="img"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 512 542"
+          >
+            <path
+              fill="currentColor"
+              d="M256 8C119.252 8 8 119.252 8 256s111.252 248 248 248 248-111.252 248-248S392.748 8 256 8zm163.97 114.366c29.503 36.046 47.369 81.957 47.835 131.955-6.984-1.477-77.018-15.682-147.502-6.818-5.752-14.041-11.181-26.393-18.617-41.614 78.321-31.977 113.818-77.482 118.284-83.523zM396.421 97.87c-3.81 5.427-35.697 48.286-111.021 76.519-34.712-63.776-73.185-116.168-79.04-124.008 67.176-16.193 137.966 1.27 190.061 47.489zm-230.48-33.25c5.585 7.659 43.438 60.116 78.537 122.509-99.087 26.313-186.36 25.934-195.834 25.809C62.38 147.205 106.678 92.573 165.941 64.62zM44.17 256.323c0-2.166.043-4.322.108-6.473 9.268.19 111.92 1.513 217.706-30.146 6.064 11.868 11.857 23.915 17.174 35.949-76.599 21.575-146.194 83.527-180.531 142.306C64.794 360.405 44.17 310.73 44.17 256.323zm81.807 167.113c22.127-45.233 82.178-103.622 167.579-132.756 29.74 77.283 42.039 142.053 45.189 160.638-68.112 29.013-150.015 21.053-212.768-27.882zm248.38 8.489c-2.171-12.886-13.446-74.897-41.152-151.033 66.38-10.626 124.7 6.768 131.947 9.055-9.442 58.941-43.273 109.844-90.795 141.978z"
+            ></path>
+          </svg>
+        </a>
+        <a
+          href="https://www.instagram.com/johnthecaveman/"
+          class="sociallink"
+          target="_blank"
+          ><svg
+            aria-hidden="true"
+            focusable="false"
+            data-prefix="fab"
+            data-icon="instagram"
+            class="svg-inline--fa fa-instagram fa-w-14"
+            role="img"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 448 512"
+          >
+            <path
+              fill="currentColor"
+              d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
+            ></path>
+          </svg>
+        </a>
+      </div>
+      <span class="copyright">Teo Ren Zhong John © 2020</span>
+    </footer>
   </body>
 </html>
