--- a/pivot.html
+++ b/pivot.html
@@ -48,13 +48,12 @@
     <div class="projectinfo">
       <div class="mainbody-01">
         <p>
-          Pivot is a descriptive analytics platform that integrates information
-          from disparate systems and organisational groups across an oil and gas
-          company. Providing dashboards, reports, information visualisations and
-          tools to workers at all levels so that they can make informed decision
-          and subsequently coordinate actions. In doing so, it works as the
-          single source of reference for key plant performance indicators from
-          the ground floor to the board room.
+          Pivot is a descriptive analytics platform that integrates information from 
+          disparate systems and organizational groups across an oil and gas company. 
+          Providing dashboards, reports, information visualizations, and tools to workers at 
+          all levels so that they can make an informed decision and subsequently coordinate actions. 
+          In doing so, it works as a single source of reference for key plant performance 
+          indicators from the ground floor to the board room.
         </p>
       </div>
       <div class="projectstatus">
@@ -81,14 +80,13 @@
       </div>
       <div class="mainbody-02">
         <p>
-          Building upon what was done in the previous phase, the team worked on
-          a list of key jobs that were identified by the former team. These key
-          jobs were tackled in 2 weeks sprint which uncovered different sets of
-          user needs. Each sprint started off with an ideation workshop with
-          staff from different parts of the organisation. Though each ideation
-          workshop was different, it broadly involved understanding the current
-          work process (tasks, data points, blockers, systems etc.), ideas for
-          improvements and prioritisation of features.
+          Building upon what was done in the previous phase, the team worked on a 
+          list of key jobs that were identified by the former team. These key jobs 
+          were tackled in 2 weeks sprint which uncovered different sets of user needs. 
+          Each sprint started off with an ideation workshop with staff from different 
+          parts of the organization. Though each ideation workshop was different, it 
+          broadly involved understanding the current work process (tasks, data points, 
+          blockers, systems, etc.), ideas for improvements and prioritization of features.
         </p>
       </div>
     </div>
@@ -115,26 +113,26 @@
       </div>
       <div class="mainbody-04">
         <p>
-          Due to the number of operation units and various department that the
-          organisation had, it was crucial to have one product that could serve
-          a consistent experience across the organisation. This meant aligning
-          and designing a single interaction model with a refined information
-          architecture. The columns represent the summary of all perspectives
-          related to an asset; while the rows represent the specific funtion or
-          perspective.
+          Due to the number of operation units and various departments 
+          that the organization had, it was crucial to have one product that 
+          could serve a consistent experience across the organization. This meant 
+          aligning and designing a single interaction model with refined information 
+          architecture. The columns represent the summary of all perspectives 
+          related to an asset; while the rows represent the specific function 
+          or perspective.
         </p>
       </div>
     </div>
     <div class="projectdesign-02">
       <div class="mainbody-05">
         <p>
-          Bars and lines, chains and flows, pyramids and breakdowns - these were
-          just some of the data visualisations that users wished to have in the
-          system. Additionally, different users had different ways that they
-          would like to compare and contrast the data. Thus, we created a single
-          scalable module for all KPIs across the organisation. This allowed
-          users the flexibility to filter and sort the data by type, time and
-          frequency in various visualisations that they were accustomed to.
+          Bars and lines, chains and flows, pyramids and breakdowns - these 
+          were just some of the data visualizations that users wished to have 
+          in the system. Additionally, different users had different ways that 
+          they would like to compare and contrast the data. Thus, we created a 
+          single scalable module for all KPIs across the organization. This 
+          allowed users the flexibility to filter and sort the data by type, time 
+          and frequency in various visualizations that they were accustomed to.
         </p>
       </div>
       <div class="designpicture-01">
@@ -147,14 +145,80 @@
       </div>
       <div class="mainbody-04">
         <p>
-          From the board room to the plant workers on the ground, PIVOT had to
-          acommodate for different types of users. The upper management had a
-          tendency to check reports and key KPIs on their phones. Therefore, it
-          was crucial that the platform was glanceable to know the overall
-          health of the assets; with the option to drill down to the root cause
-          when needed.
+          From the board room to the plant workers on the ground, PIVOT had to 
+          accommodate for different types of users. The upper management tended 
+          to check reports and key KPIs on their phones. Therefore, the platform 
+          needed to be glanceable to know the overall health of the assets; 
+          with the option to drill down to the root cause when needed.
         </p>
       </div>
     </div>
+    </div>
+    <footer>
+      <div>
+        <a
+          href="https://www.linkedin.com/in/teorzjohn/"
+          class="sociallink"
+          target="_blank"
+        >
+          <svg
+            aria-hidden="true"
+            focusable="false"
+            data-prefix="fab"
+            data-icon="linkedin-in"
+            class="svg-inline--fa fa-linkedin-in fa-w-14"
+            role="img"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 448 512"
+          >
+            <path
+              fill="currentColor"
+              d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"
+            ></path>
+          </svg>
+        </a>
+        <a
+          href="https://www.linkedin.com/in/teorzjohn/"
+          class="sociallink"
+          target="_blank"
+          ><svg
+            aria-hidden="true"
+            focusable="false"
+            data-prefix="fab"
+            data-icon="dribbble"
+            class="svg-inline--fa fa-dribbble fa-w-14"
+            role="img"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 512 542"
+          >
+            <path
+              fill="currentColor"
+              d="M256 8C119.252 8 8 119.252 8 256s111.252 248 248 248 248-111.252 248-248S392.748 8 256 8zm163.97 114.366c29.503 36.046 47.369 81.957 47.835 131.955-6.984-1.477-77.018-15.682-147.502-6.818-5.752-14.041-11.181-26.393-18.617-41.614 78.321-31.977 113.818-77.482 118.284-83.523zM396.421 97.87c-3.81 5.427-35.697 48.286-111.021 76.519-34.712-63.776-73.185-116.168-79.04-124.008 67.176-16.193 137.966 1.27 190.061 47.489zm-230.48-33.25c5.585 7.659 43.438 60.116 78.537 122.509-99.087 26.313-186.36 25.934-195.834 25.809C62.38 147.205 106.678 92.573 165.941 64.62zM44.17 256.323c0-2.166.043-4.322.108-6.473 9.268.19 111.92 1.513 217.706-30.146 6.064 11.868 11.857 23.915 17.174 35.949-76.599 21.575-146.194 83.527-180.531 142.306C64.794 360.405 44.17 310.73 44.17 256.323zm81.807 167.113c22.127-45.233 82.178-103.622 167.579-132.756 29.74 77.283 42.039 142.053 45.189 160.638-68.112 29.013-150.015 21.053-212.768-27.882zm248.38 8.489c-2.171-12.886-13.446-74.897-41.152-151.033 66.38-10.626 124.7 6.768 131.947 9.055-9.442 58.941-43.273 109.844-90.795 141.978z"
+            ></path>
+          </svg>
+        </a>
+        <a
+          href="https://www.instagram.com/johnthecaveman/"
+          class="sociallink"
+          target="_blank"
+          ><svg
+            aria-hidden="true"
+            focusable="false"
+            data-prefix="fab"
+            data-icon="instagram"
+            class="svg-inline--fa fa-instagram fa-w-14"
+            role="img"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 448 512"
+          >
+            <path
+              fill="currentColor"
+              d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
+            ></path>
+          </svg>
+        </a>
+      </div>
+      <span class="copyright">Teo Ren Zhong John © 2020</span>
+    </footer>
   </body>
 </html>
