small style additions

--- a/doodles.html
+++ b/doodles.html
@@ -40,7 +40,7 @@
       </div>
     </nav>
 
-    <h2 class="title">I like doodling interaction ideas</h2>
+    <h2 class="title">I like playing with interaction ideas</h2>
 
     <div class="mainbody-02">
       <h4 class="subheader">
