Portfolio link update

--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
           </svg>
         </a>
         <a
-          href="https://www.linkedin.com/in/teorzjohn/"
+          href="https://dribbble.com/teorzjohn"
           class="sociallink"
           target="_blank"
           ><svg
