--- a/doodles.html
+++ b/doodles.html
@@ -105,7 +105,7 @@
           </svg>
         </a>
         <a
-          href="https://www.linkedin.com/in/teorzjohn/"
+          href="https://dribbble.com/teorzjohn"
           class="sociallink"
           target="_blank"
           ><svg
