--- a/aubergine.html
+++ b/aubergine.html
@@ -52,7 +52,7 @@
                 <p class="secondarydetails">Product Development <br> Marketing 
                 <p class="primarydetails">Team</p>
                 <p class="secondarydetails">Studio Aubergine</p>
-                <hr>
+                <p class="primarydetails">-</p>
                 <p class="secondarydetails02">Winner</p>
                 <p class="primarydetails02">Asia Design Prize 2018</p>
                 <p class="secondarydetails02">Silver</p>
