--- a/aubergine.html
+++ b/aubergine.html
@@ -36,7 +36,7 @@
             <div class="mainbody-01">
                 <p>Everyone knows the importance of getting 8 hours of sleep, but 
                     that just is not the reality for most. How many times do you 
-                    atch yourself dozing off throughout the day? What if you could 
+                    catch yourself dozing off throughout the day? What if you could 
                     snooze comfortably, right there and then? The Aubergine Pillow 
                     is an inflatable pillow that plumps up generously in one puff, yet 
                     compacts small, affording us the everyday comfort we hunger for. 
