--- a/about.html
+++ b/about.html
@@ -14,6 +14,10 @@
       href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/progressively/dist/progressively.min.css"
+    />
   </head>
 
   <!-- Body is the content that people see on the website -->
@@ -73,7 +77,13 @@
           </p>
         </div>
       </div>
-      <img src="Images/johnteo.jpg" />
+      <div class="profileimg">
+        <img
+          class="progressive__img progressive--not-loaded"
+          data-progressive="Images/johnteo.jpg"
+          src="Images/johnteo-s.jpg"
+        />
+      </div>
     </div>
     <footer>
       <div>
@@ -141,5 +151,14 @@
       </div>
       <span class="copyright">Teo Ren Zhong John © 2020</span>
     </footer>
+    <script src="https://unpkg.com/progressively/dist/progressively.min.js"></script>
+    <script>
+      progressively.init({
+        delay: 0,
+        onLoadComplete: function() {
+          console.log("All images loaded!");
+        }
+      });
+    </script>
   </body>
 </html>
