--- a/about.html
+++ b/about.html
@@ -51,23 +51,24 @@
           <p class="spacing">My name is John Teo, nice to meet you!</p>
           <p class="spacing">
             I am currently a service and interaction designer at
-            <a href="https://www.fjordnet.com/"> Fjord Singapore</a>.  
+            <a href="https://www.fjordnet.com/"> Fjord Singapore</a>.
           </p>
           <p class="spacing">
             Previously, I worked as a product designer at
             <a href="https://www.spgroup.com.sg/"> SP Group</a> and
-            <a href="https://www.dbs.com.sg/"> DBS</a>. In 2016, I co-founded my mini creative studio,
-            <a href="https://www.studioaubergine.design/"> Studio Aubergine</a>, with some friends
-            for all our weird little experiments. 
+            <a href="https://www.dbs.com.sg/"> DBS</a>. In 2016, I co-founded my
+            mini creative studio,
+            <a href="https://www.studioaubergine.design/"> Studio Aubergine</a>,
+            with some friends for all our weird little experiments.
           </p>
           <p class="spacing">
-            I love exploring new mediums and industries - from social good to emerging technology - 
-            to learn how design and technology can be leveraged to enact positive behavior change. Additionally, 
-            nothing makes me happier than working with a team that believes in what they do.
+            I love exploring new mediums and industries - from social good to
+            emerging technology - to learn how design and technology can be
+            leveraged to enact positive behavior change.
           </p>
           <p class="spacing">
-            If you need to get in touch to learn more about what I do or want to collaborate on a little experiment,
-            drop me an email at
+            If you need to get in touch or want to collaborate on a little
+            experiment, drop me an email at
             <a
               href="mailto:teorzjohn@gmail.com?Subject=Hello%20there"
               target="_top"
