--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="data:images/favicon.ico;,"
+      type="image/x-icon"
+    />
     <title>John Teo Portfolio</title>
     <!-- Title is the name you see on the tab/link -->
     <link rel="stylesheet" type="text/css" href="style.css" />
