update blur effect

--- a/about.html
+++ b/about.html
@@ -14,10 +14,7 @@
       href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/progressively/dist/progressively.min.css"
-    />
+    <link rel="stylesheet" href="progressively.css" />
   </head>
 
   <!-- Body is the content that people see on the website -->
