--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
           <div class="box">
             <img
               class="progressive__img progressive--not-loaded"
-              data-progressive="Images/oilandgas-00.jpg"
-              src="Images/oilandgas-00-s.jpg"
+              data-progressive="Images/pivot-00.jpg"
+              src="Images/pivot-00-s.jpg"
             />
           </div>
           <h4><br />Visualizing Data</h4>
