--- a/airline.html
+++ b/airline.html
@@ -13,7 +13,9 @@
     <link
       href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap"
       rel="stylesheet"
+      type="text/css"
     />
+    <link rel="stylesheet" href="progressively.css" />
   </head>
 
   <!-- Body is the content that people see on the website -->
@@ -42,7 +44,9 @@
     <div class="projectheader">
       <h4>CASE STUDY - 2018</h4>
       <h1>A Beacon for Better <br />Customer Experience</h1>
-      <img src="Images/airline-01.jpg" />
+      <img class="progressive__img progressive--not-loaded"
+      data-progressive="Images/airline-01.jpg"
+      src="Images/airline-01-s.jpg" />
     </div>
     <div class="projectinfo">
       <div class="mainbody-01">
@@ -99,7 +103,9 @@
       </div>
     </div>
     <div class="rightcontainer">
-      <img class="captionmb" src="Images/airline-02.png" />
+      <img class="captionmb progressive__img progressive--not-loaded" 
+      data-progressive="Images/airline-02.png"
+      src="Images/airline-02-s.jpg" />
       <span>Observing and interviewing staff and customers</span>
     </div>
     <div class="mainbody-03">
@@ -113,14 +119,17 @@
       </p>
     </div>
     <div class="rightcontainer">
-      <img class="captionmb" src="Images/airline-03.png" />
+      <img class="captionmb progressive__img progressive--not-loaded" 
+      data-progressive="Images/airline-03.png"
+      src="Images/airline-03-s.jpg" />
       <span>Bringing the organisation together for a workshop</span>
     </div>
 
     <h3>The Design</h3>
     <div class="projectdesign-01">
       <div class="designpicture-01">
-        <img class="imageflush" src="Images/airline-04.jpg" />
+        <img class="imageflush" 
+        src="Images/airline-04.jpg" />
       </div>
       <div class="mainbody-04">
         <p>
@@ -144,12 +153,14 @@
         </p>
       </div>
       <div class="designpicture-01">
-        <img class="imageflush" src="Images/airline-05.jpg" />
+        <img class="imageflush" 
+        src="Images/airline-05.jpg" />
       </div>
     </div>
     <div class="projectdesign-01">
       <div class="designpicture-01">
-        <img class="imageflush" src="Images/airline-06.jpg" />
+        <img class="imageflush" 
+        src="Images/airline-06.jpg" />
       </div>
       <div class="mainbody-04">
         <p>
@@ -229,5 +240,16 @@
       </div>
       <span class="copyright">Teo Ren Zhong John © 2020</span>
     </footer>
+
+    <script src="https://unpkg.com/progressively/dist/progressively.min.js"></script>
+    <script>
+      progressively.init({
+        delay: 0,
+        onLoadComplete: function() {
+          console.log("All images loaded!");
+        }
+      });
+    </script>
+    
   </body>
 </html>
