--- a/doodles.html
+++ b/doodles.html
@@ -13,7 +13,9 @@
     <link
       href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap"
       rel="stylesheet"
+      type="text/css"
     />
+    <link rel="stylesheet" href="progressively.css" />
   </head>
 
   <!-- Body is the content that people see on the website -->
@@ -52,33 +54,51 @@
     <!-- Grid -->
     <div class="grid">
       <div class="column  nohover">
-        <img class="gif" src="Gifs/01.gif" />
+        <img class="gif progressive__img progressive--not-loaded" 
+        data-progressive="Gifs/01.gif"
+        src="Images/gif-01-s.jpg" />
       </div>
       <div class="column middle  nohover">
-        <img class="gif" src="Gifs/02.gif" />
+        <img class="gif progressive__img progressive--not-loaded" 
+        data-progressive="Gifs/02.gif"
+        src="Images/gif-02-s.jpg" />
       </div>
       <div class="column  nohover">
-        <img class="gif" src="Gifs/03.gif" />
+        <img class="gif progressive__img progressive--not-loaded" 
+        data-progressive="Gifs/03.gif"
+        src="Images/gif-03-s.jpg" />
       </div>
 
       <div class="column  nohover">
-        <img class="gif" src="Gifs/04.gif" />
+        <img class="gif progressive__img progressive--not-loaded" 
+        data-progressive="Gifs/04.gif"
+        src="Images/gif-04-s.jpg" />
       </div>
       <div class="column middle  nohover">
-        <img class="gif" src="Gifs/05.gif" />
+        <img class="gif progressive__img progressive--not-loaded"
+        data-progressive="Gifs/05.gif"
+        src="Images/gif-05-s.jpg" />
       </div>
       <div class="column  nohover">
-        <img class="gif" src="Gifs/06.gif" />
+        <img class="gif progressive__img progressive--not-loaded" 
+        data-progressive="Gifs/06.gif"
+        src="Images/gif-06-s.jpg" />
       </div>
 
       <div class="column nohover">
-        <img class="gif" src="Gifs/07.gif" />
+        <img class="gif progressive__img progressive--not-loaded"
+        data-progressive="Gifs/07.gif"
+        src="Images/gif-07-s.jpg" />
       </div>
       <div class="column nohover">
-        <img class="gif" src="Gifs/08.gif" />
+        <img class="gif progressive__img progressive--not-loaded" 
+        data-progressive="Gifs/08.gif"
+        src="Images/gif-08-s.jpg"/>
       </div>
       <div class="column nohover">
-        <img class="gif" src="Gifs/09.gif" />
+        <img class="gif progressive__img progressive--not-loaded" 
+        data-progressive="Gifs/09.gif"
+        src="Images/gif-09-s.jpg" />
       </div>
     </div>
     <footer>
@@ -147,5 +167,16 @@
       </div>
       <span class="copyright">Teo Ren Zhong John © 2020</span>
     </footer>
+
+    <script src="https://unpkg.com/progressively/dist/progressively.min.js"></script>
+    <script>
+      progressively.init({
+        delay: 0,
+        onLoadComplete: function() {
+          console.log("All images loaded!");
+        }
+      });
+    </script>
+
   </body>
 </html>
