--- a/pivot.html
+++ b/pivot.html
@@ -13,7 +13,9 @@
     <link
       href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap"
       rel="stylesheet"
+      type="text/css"
     />
+    <link rel="stylesheet" href="progressively.css" />
   </head>
 
   <!-- Body is the content that people see on the website -->
@@ -43,7 +45,9 @@
     <div class="projectheader">
       <h4>CASE STUDY - 2019</h4>
       <h1>Visualizing Data</h1>
-      <img src="Images/pivot-00.png" />
+      <img class="progressive__img progressive--not-loaded"
+      data-progressive="Images/pivot-01.png"
+      src="Images/pivot-01-s.jpg" />
     </div>
     <div class="projectinfo">
       <div class="mainbody-01">
@@ -91,7 +95,9 @@
       </div>
     </div>
     <div class="rightcontainer">
-      <img class="captionmb" src="Images/pivot-01.png" />
+      <img class="captionmb progressive__img progressive--not-loaded" 
+      data-progressive="Images/pivot-02.png"
+      src="Images/pivot-02-s.jpg" />
       <span>Ideation workshops with the staff</span>
     </div>
     <div class="mainbody-03">
@@ -103,13 +109,16 @@
       </p>
     </div>
     <div class="rightcontainer">
-      <img class="captionmb" src="Images/pivot-02.png" />
+      <img class="captionmb progressive__img progressive--not-loaded"
+      data-progressive="Images/pivot-03.png" 
+      src="Images/pivot-03-s.jpg" />
       <span>Quick and dirty prototypes</span>
     </div>
     <h3>The Design</h3>
     <div class="projectdesign-01">
       <div class="designpicture-01">
-        <img class="imageflush" src="Images/pivot-03.png" />
+        <img class="imageflush" 
+        src="Images/pivot-04.png" />
       </div>
       <div class="mainbody-04">
         <p>
@@ -136,12 +145,14 @@
         </p>
       </div>
       <div class="designpicture-01">
-        <img class="imageflush" src="Gifs/pivot-01.gif" />
+        <img class="imageflush" 
+        src="Gifs/pivot-05.gif" />
       </div>
     </div>
     <div class="projectdesign-01">
       <div class="designpicture-01">
-        <img class="imageflush" src="Gifs/pivot-02.gif" />
+        <img class="imageflush" 
+        src="Gifs/pivot-06.gif" />
       </div>
       <div class="mainbody-04">
         <p>
@@ -220,5 +231,16 @@
       </div>
       <span class="copyright">Teo Ren Zhong John © 2020</span>
     </footer>
+
+    <script src="https://unpkg.com/progressively/dist/progressively.min.js"></script>
+    <script>
+      progressively.init({
+        delay: 0,
+        onLoadComplete: function() {
+          console.log("All images loaded!");
+        }
+      });
+    </script>
+    
   </body>
 </html>
