remove coming soon project

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <!-- Grid -->
     <div class="grid">
-      <div class="column">
+      <!-- <div class="column">
         <a href="forb.html">
           <div class="box">
             <img
@@ -66,7 +66,7 @@
           <h4>The Future of <br />Retail Banking</h4>
           <h5>Fjord</h5>
         </a>
-      </div>
+      </div> -->
 
       <div class="column">
         <a href="switch.html">
@@ -229,9 +229,9 @@
     <script>
       progressively.init({
         delay: 0,
-        onLoadComplete: function() {
+        onLoadComplete: function () {
           console.log("All images loaded!");
-        }
+        },
       });
     </script>
   </body>
